adjusted some layout issues with toggle keys

--- a/assets/main.css
+++ b/assets/main.css
@@ -71,6 +71,10 @@ body {
     font-size: larger;
     font-weight: bold;
 }
+.allowed-letters-title {
+    font-size: larger;
+    font-weight: bold;
+}
 
 .settings-difficulty {
     margin-left: -10vw;
@@ -80,8 +84,12 @@ body {
     text-align: left;
 }
 
+.all-words {
+    line-height: 6vmin;
+}
+
 .keyboard {
-    line-height: 10vmin;
+    line-height: 8vmin;
     display: flex;
     width: 100%;
     align-content: center;
@@ -91,7 +99,7 @@ body {
 }
 
 .key {
-  margin: 1vmin;
+  margin: 1.5vmin;
   text-align: center;
   border-radius: 5px;
   background-color: #A8DADC;
@@ -99,7 +107,7 @@ body {
   display: block;
   padding: 0.5vmin;
   font-weight: bold;
-  min-width: 25px;
+  min-width: 6vmin;
 }
 
 .active {
